feat: add category feature with todo relation
